--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-2 : Digital Clock</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="clock">12 : 10 : 58 AM</div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
